# MyPracticeRoom

./: CMakeLists.txt  README.md  lab1_9.7z  lab2_9.7z  lab3_9.7z
Lab1/: CMakeLists.txt
Lab1/src/: func.h  task1.c  task2.c  task3.c  task4.c  task5_func.c  task5_main.c  task6_func.c  task6_main.c  task7_func.c  task7_main.c
Lab2/: CMakeLists.txt
Lab2/src/: main.c
Lab3/: CMakeLists.txt
Lab3/scr/: task1.c  task2.c  task3.c
Lab4/: CMakeLists.txt
Lab4/src/: main.c
Lab5/: CMakeLists.txt
Lab5/src/: main.c
Lab6/: CMakeLists.txt
Lab6/src/: main.c
Lab7/: CMakeLists.txt
Lab7/src/: main.c
